tls/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: otel-gateway-route
  namespace: opentelemetry
spec:
  host: otel-gateway.prospecta.com
  port:
    targetPort: otlp-grpc
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: None
  to:
    kind: Service
    name: otel-gateway-collector
    weight: 100
  wildcardPolicy: None
